[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/HeartBroken.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/heart_right.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/heart_left.png" type="Texture" id=3]

[node name="HeartBroken" type="Node2D"]
script = ExtResource( 1 )

[node name="HeartParts" type="Node2D" parent="."]
position = Vector2( 0, -1 )
z_index = 100

[node name="HeartLeft" type="Sprite" parent="HeartParts"]
position = Vector2( -6, 0 )
texture = ExtResource( 3 )

[node name="HeartRight" type="Sprite" parent="HeartParts"]
position = Vector2( 6, 0 )
texture = ExtResource( 2 )
